test_cases/negative/compiler/recursive_import_2.snek
import "./recursive_import_1.snek" as lib;
